<resources>
    <string name="app_name">Heat Band</string>
    <string name="action_settings">Settings</string>
    <string name="message_button">Button</string>
    <string name="message_text">Name</string>
    <string name="Mode_3">Mode 3</string>
    <string name="Mode_2">Mode 2</string>
    <string name="Mode_1">Mode 1</string>
    <string name="applyChanges">Apply Changes</string>
    <string name="TimerOn">Timer On</string>
    <string name="TimerOff">Timer Off</string>
    <string name="Temperature">Temperature</string>
    <string name="Temperature_default">--</string>
    <string name="Celsius">°C</string>
    <string name="Fahrenheit">°F</string>
    <string name="Degree">°</string>
    <string name="tempOffset">Offset</string>
    <string name="tempOffset_text">0°</string>
    <string name="tempOffset_text_name">Temperature Offset (-10° to 10°)</string>

    <string name="Weather_text_default">7°/3°</string>
    <string name="Humidity_default">Humidity: 80%</string>
    <string name="Weather_icon">Weather Icon</string>
    <string name="Weather_description">Weather Description</string>


    <string name="Battery">Battery</string>
    <string name="batteryCharging">Charging</string>
    <string name="batteryLow">Low Battery</string>
    <string name="btConnected">Bluetooth Connected</string>
    <string name="btSearching">Bluetooth Searching</string>

    <string name="Zone_1">Zone 1</string>
    <string name="Zone_2">Zone 2</string>
    <string name="Zone_3">Zone 3</string>
    <string name="Save">Save</string>
    <string name="ModeHeader">Mode</string>

    <string name="channel_name">This is a channel</string>
    <string name="channel_description">This is a description</string>
    <string name="refresh">Refresh</string>
    <string name="count_down_zero">0 Hour 0 Minute 0 Second</string>
    <string name="setTimer">Set Timer</string>
</resources>
