<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@color/floatingColor"
    android:theme="@style/Theme.AppCompat.Dialog"
    tools:context="com.example.vomyrak.heatband.FloatingActivity"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="16dp">

    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:id="@+id/set_zone1"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:dsb_indicatorColor="@color/reached"
        app:dsb_indicatorTextAppearance="@color/text_light"
        app:dsb_max="6"
        app:dsb_min="0dp"
        app:dsb_progressColor="@color/reached"
        app:dsb_trackColor="@color/unreached"
        app:dsb_value="2"
        app:layout_constraintBottom_toBottomOf="@+id/zone1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zone1"
        app:layout_constraintTop_toTopOf="@+id/zone1" />

    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:id="@+id/set_zone2"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:dsb_indicatorColor="@color/reached"
        app:dsb_indicatorTextAppearance="@color/text_light"
        app:dsb_max="6"
        app:dsb_min="0dp"
        app:dsb_progressColor="@color/reached"
        app:dsb_trackColor="@color/unreached"
        app:dsb_value="2"
        app:layout_constraintBottom_toBottomOf="@+id/zone2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zone2"
        app:layout_constraintTop_toTopOf="@+id/zone2" />

    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:id="@+id/set_zone3"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:dsb_indicatorColor="@color/reached"
        app:dsb_indicatorTextAppearance="@color/text_light"
        app:dsb_max="6"
        app:dsb_min="0dp"
        app:dsb_progressColor="@color/reached"
        app:dsb_trackColor="@color/unreached"
        app:dsb_value="2"
        app:layout_constraintBottom_toBottomOf="@+id/zone3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zone3"
        app:layout_constraintTop_toTopOf="@+id/zone3" />

    <TextView
        android:id="@+id/zone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Zone_1"
        android:textColor="@color/text_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/zone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Zone_2"
        android:textColor="@color/text_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/zone1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/zone1"
        app:layout_constraintTop_toBottomOf="@+id/zone1" />

    <TextView
        android:id="@+id/zone3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Zone_3"
        android:textColor="@color/text_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/zone2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/zone2"
        app:layout_constraintTop_toBottomOf="@+id/zone2" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/save"
        android:layout_width="77dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:alpha="0.75"
        android:background="@color/button"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/set_zone3"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/zone3" />


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/modeHeader"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/currentDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="com.example.vomyrak.heatband.MainActivity">

        <TextView
            android:id="@+id/modeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/ModeHeader"
            android:textColor="@color/text_light"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
